<resources>
    <string name="app_name">北极星 — 看点助手</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">热点</string>
    <string name="title_notifications">个人中心</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="homefragment">Hello home fragment</string>
    <string name="hotfragment">Hello hot fragment</string>
    <string name="personalfragment">Hello personal fragment</string>


    <string name="qutaotiao"> 趣头条： </string>
    <string name="qutoutiao_lable"> 支持签到 </string>

    <string name="quduopai"> 趣多拍： </string>

    <string name="zhongqingkandian"> 中青看点： </string>
    <string name="start">开始</string>
    <string name="r_number">刷新圈数：</string>
    <string name="openXF">打开悬浮</string>
    <string name="times">  次/圈/\t  </string>
    <string name="times_quan">圈</string>
    <string name="wlkk">微鲤看看</string>
    <string name="htt" >惠头条</string>

</resources>
