<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    tools:context=".homeFragment">


    <LinearLayout
        android:id="@+id/lay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:id="@+id/checkqtt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/qutaotiao" />



                    <EditText
                        android:id="@+id/qtt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="5"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:text="0" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/times" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/qutoutiao_lable"
                        android:textColor="@android:color/holo_blue_bright" />


                </TableRow>

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                <CheckBox
                    android:id="@+id/checkquduopai"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quduopai" />



                    <EditText
                        android:id="@+id/qdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="5"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:text="0" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/times" />


            </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <CheckBox
                        android:id="@+id/checkzhongqingkandian"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zhongqingkandian" />

                    <EditText
                        android:id="@+id/zqkd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="5"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:text="0" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/times" />


                </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <CheckBox
                    android:id="@+id/checkwlkk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wlkk" />




                <EditText
                    android:id="@+id/wlkk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:text="0" />

                <TextView
                    android:id="@+id/textView1111"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/times" />


            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <CheckBox
                    android:id="@+id/chechtt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/htt" />


                <EditText
                    android:id="@+id/htt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:text="0" />

                <TextView
                    android:id="@+id/textView111122"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/times" />


            </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/r_number" />

                    <EditText
                        android:id="@+id/times"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="5"
                        android:inputType="number"
                        android:text="0" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/times_quan" />
                </TableRow>

            </TableLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="4"

            android:onClick="runMyUiautomator"
            android:text="@string/start" />

    </LinearLayout>


</FrameLayout>